# ckanext-graphic-walker

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/graphic_walker/: config.py  config_declaration.yml  const.py  helpers.py  plugin.py  schema.py  views.py
ckanext/graphic_walker/assets/: webassets.yml
ckanext/graphic_walker/assets/js/: graphic-walker.min.js
ckanext/graphic_walker/public/graphic-walker/: chartinfo.json
ckanext/graphic_walker/templates/graphic_walker/: graphic_walker_view.html
ckanext/graphic_walker/tests/: test_plugin.py
react-graphic-walker/: index.html  package-lock.json  package.json  vite.config.ts
react-graphic-walker/src/: App.tsx  config.ts  interfaces.ts  main.css  main.tsx  vanilla.tsx
react-graphic-walker/src/components/leafletRenderer/: geoConfigPanel.tsx
react-graphic-walker/src/components/tabs/: editableTab.tsx
react-graphic-walker/src/components/ui/: tabs.tsx
react-graphic-walker/src/components/visualConfig/: index.tsx
react-graphic-walker/src/dataSource/: config.ts  index.tsx
react-graphic-walker/src/dataSource/dataSelection/: index.tsx  remoteFile.tsx
react-graphic-walker/src/fields/datasetFields/: fieldPill.tsx  meaFields.tsx
react-graphic-walker/src/fields/filterField/: tabs.tsx
react-graphic-walker/src/locales/: en-US.json  i18n.ts  ja-JP.json  zh-CN.json
react-graphic-walker/src/renderer/: specRenderer.tsx
react-graphic-walker/src/store/: index.tsx
react-graphic-walker/src/vis/: react-vega.tsx
